# notas-musicais

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 01_tutorial.md  index.md
docs/api/: escalas.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escalas.py
notas_musicais/.github/workflows/: pipeline.yml
tests/: test_cli.py  test_escalas.py  teste_acordes.py
tests/.github/workflows/: pipeline.yml
